--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -55,7 +55,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" asp-area="" asp-controller="My" asp-action="Tickets">
-                    <i class="nav-icon fa fa-users"></i> My Tickets
+                    <i class="nav-icon fa fa-exclamation-circle"></i> My Tickets
                     <span class="badge badge-primary"></span>
                 </a>
             </li>
