--- a/AMS/Views/My/Tickets.cshtml
+++ b/AMS/Views/My/Tickets.cshtml
@@ -117,6 +117,7 @@
                                 }
 
                             <td>
+                                <a class="btn-sm text-white btn-info mx-1" asp-controller="Assignments" asp-action="Index" asp-route-ticketId="@item.Id"><i class="fa fa-list mx-1"></i>Assignments</a>
 
                                 <a class="btn-sm text-white btn-info mx-1" asp-controller="TodoTasks" asp-action="Index" asp-route-ticketId="@item.Id"><i class="fa fa-tasks mx-1"></i>Tasks</a>
 
