--- a/AMS/Views/Shared/_app-header.cshtml
+++ b/AMS/Views/Shared/_app-header.cshtml
@@ -7,7 +7,7 @@
   <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="/">
       @*<img class="navbar-brand-full" src="~/images/brand/logo.svg" width="89" height="25" alt="CoreUI Logo">
       <img class="navbar-brand-minimized" src="~/images/brand/sygnet.svg" width="30" height="30" alt="CoreUI Logo">*@
       <img src="~/images/brand/coreui-signet.svg" width="40" height="40" class="d-inline-block align-top" alt="CoreUI Logo">
