--- a/AMS/Views/Shared/_user-nav.cshtml
+++ b/AMS/Views/Shared/_user-nav.cshtml
@@ -10,7 +10,7 @@
 
 <li class="nav-item dropdown">
   <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-    <img class="img-avatar" src="@user?.PictureUrl" alt="@user?.Email">
+    <img class="img-avatar" src="@user?.PictureUrl" alt="@user?.Email" title="@user?.DisplayName">
   </a>
   <div class="dropdown-menu dropdown-menu-right">
       <div class="dropdown-header text-center">
