Add Migrations and Some Finalization

--- a/AMS/Views/Users/Create.cshtml
+++ b/AMS/Views/Users/Create.cshtml
@@ -1,8 +1,10 @@
 ﻿@model AMS.Models.AmsUser
-
+@using Microsoft.EntityFrameworkCore
+@inject AMS.Data.AmsContext context
 @{
     ViewData["Title"] = "User";
     ViewData["Action"] = "Create";
+    var Tenants = new SelectList(await context.Tenants.ToListAsync(), "Id", "Name");
 }
 
 <div class="row">
@@ -15,8 +17,27 @@
                 </div>
                 <div class="card-body">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <!-- TenantId Hidden -->
-                    <input type="hidden" asp-for="TenantId" value="@ViewData["TenantId"]" />
+
+                    @if (User.HasClaim("SYSADMIN", ""))
+                    {
+                        <!-- Tenant Select -->
+                        <div class="form-group row">
+                            <label asp-for="TenantId" class="col-md-3 col-form-label"></label>
+                            <div class="col-md-9">
+                                <select asp-for="TenantId" asp-items="@Tenants" class="form-control">
+                                    <option value="">--- SELECT ---</option>
+                                </select>
+                                <span class="help-block"><small></small></span>
+                                <span asp-validation-for="TenantId" class="text-danger"></span>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <!-- TenantId Hidden -->
+                        <input type="hidden" asp-for="TenantId" value="@ViewData["TenantId"]" />
+
+                    }
 
                     <!-- UserName Input -->
                     <div class="form-group row">
@@ -80,7 +101,7 @@
 
                     <!-- Password Input -->
                     <div class="form-group row">
-                        <label for="password" class="col-md-3 col-form-label"></label>
+                        <label for="password" class="col-md-3 col-form-label">Password</label>
                         <div class="col-md-9">
                             <input type="password" id="password" name="password" class="form-control" />
                             <span class="help-block"><small></small></span>
@@ -89,7 +110,7 @@
 
                     <!-- ConfirmPassword Input -->
                     <div class="form-group row">
-                        <label for="confirmPassword" class="col-md-3 col-form-label"></label>
+                        <label for="confirmPassword" class="col-md-3 col-form-label">Confirm Password</label>
                         <div class="col-md-9">
                             <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" />
                             <span class="help-block"><small></small></span>
@@ -98,7 +119,7 @@
 
                     <!-- Picture Input -->
                     <div class="form-group row">
-                        <label for="file" class="col-md-3 col-form-label"></label>
+                        <label for="file" class="col-md-3 col-form-label">Picture</label>
                         <div class="col-md-9">
                             <input type="file" id="file" name="file" class="form-control" />
                             <span class="help-block"><small></small></span>
