--- a/AMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -75,7 +75,7 @@
                             <div>
                                 <h2>Asset Management</h2>
                                 <p>Create, manage and monitor company asset operations</p>
-                                <button type="button" class="btn btn-primary active mt-3">Learn more!</button>
+                                <a href="http://itech.sy" target="_blank" class="btn btn-primary active mt-3">Learn more!</a>
                             </div>
                         </div>
                     </div>
