--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -18,7 +18,11 @@
                 </a>
             </li>
 
-
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="Users" asp-action="Index">
+                    <i class="nav-icon fa fa-users"></i> Users
+                </a>
+            </li>
         }
 
         @if (User.HasClaim(x => x.Type == "TenantId"))
