Fixed bu in ticket code editing

--- a/AMS/Views/Tickets/Edit.cshtml
+++ b/AMS/Views/Tickets/Edit.cshtml
@@ -58,7 +58,7 @@
                         <div class="form-group col-md-6 col-sm-12">
                             <label asp-for="Code" class="col-md-3 col-form-label"></label>
                             <div class="col-md-9">
-                                <input asp-for="Code" class="form-control" disabled />
+                                <input readonly asp-for="Code" class="form-control" />
                                 <span class="help-block"><small></small></span>
                                 <span asp-validation-for="Code" class="text-danger"></span>
                             </div>
