--- a/AMS/Views/Shared/_user-nav.cshtml
+++ b/AMS/Views/Shared/_user-nav.cshtml
@@ -48,7 +48,7 @@
           <span class="badge badge-primary"></span>
       </a>
 
-      <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new {area = ""})" method="post" id="logoutForm">
+      <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home")" method="post" id="logoutForm">
           <script>
               function logout() {
                   $('#logoutForm').submit();
