Add Assignment button to ticket edit

--- a/AMS/Views/Tickets/Edit.cshtml
+++ b/AMS/Views/Tickets/Edit.cshtml
@@ -16,7 +16,12 @@
                     Form
                 </div>
                 <div class="card-body">
-                    
+                    <div class="row mb-1">
+                        <a asp-controller="Assignments" asp-action="Index" asp-route-ticketId="@Model.Id" class="btn btn-success">
+                            Assignments
+                        </a>
+                    </div>
+
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <!-- Id Hidden -->
