Fix type in attachment

--- a/AMS/Views/Tickets/Create.cshtml
+++ b/AMS/Views/Tickets/Create.cshtml
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="row">
-                        <!-- Ticket Attachements Input -->
+                        <!-- Ticket Attachments Input -->
                         <div class="form-group col-md-12">
                             <label for="files" class="col-md-3 col-form-label">Attachments</label>
                             <div class="col-md-9">
