--- a/AMS/Views/Tickets/_Attachments.cshtml
+++ b/AMS/Views/Tickets/_Attachments.cshtml
@@ -29,7 +29,7 @@
                 {
                     <tr>
                         <td>
-                            <a href="~/files/@item.TicketId/@item.FileName">@Html.DisplayFor(modelItem => item.Title)</a>
+                            <a href="@item.Url">@Html.DisplayFor(modelItem => item.Title)</a>
                         </td>
 
                         <td>
