--- a/AMS/Views/TodoTasks/Edit.cshtml
+++ b/AMS/Views/TodoTasks/Edit.cshtml
@@ -14,6 +14,15 @@
                     Form
                 </div>
                 <div class="card-body">
+                    <div class="row mb-1">
+                        <div class="form-group col-md-12">
+                            <a asp-controller="Assignments" asp-action="Index" asp-route-todoTaskId="@Model.Id" class="btn btn-success">
+                                Assignments
+                            </a>
+
+                        </div>
+                    </div>
+
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <!-- Id Hidden -->
